--- a/opentoolcontroller/views/FloatVarEditor.ui
+++ b/opentoolcontroller/views/FloatVarEditor.ui
@@ -184,6 +184,30 @@
        </property>
       </widget>
      </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Use Launch Value</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Launch Value</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QDoubleSpinBox" name="ui_launch_value"/>
+     </item>
+     <item row="7" column="1">
+      <widget class="QCheckBox" name="ui_use_launch_value">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
