--- a/opentoolcontroller/views/IntVarEditor.ui
+++ b/opentoolcontroller/views/IntVarEditor.ui
@@ -37,6 +37,12 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item row="1" column="0">
@@ -56,7 +62,14 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QSpinBox" name="ui_min"/>
+      <widget class="QSpinBox" name="ui_min">
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
@@ -75,7 +88,14 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QSpinBox" name="ui_max"/>
+      <widget class="QSpinBox" name="ui_max">
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label">
@@ -116,6 +136,37 @@
       <widget class="QCheckBox" name="ui_user_manual_set">
        <property name="text">
         <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Use Launch Value</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Launch Value</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QCheckBox" name="ui_use_launch_value">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QSpinBox" name="ui_launch_value">
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
        </property>
       </widget>
      </item>
