--- a/opentoolcontroller/views/AnalogOutputEditor.ui
+++ b/opentoolcontroller/views/AnalogOutputEditor.ui
@@ -83,7 +83,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="7" column="0">
       <widget class="QLabel" name="label_5">
        <property name="minimumSize">
         <size>
@@ -99,10 +99,10 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="7" column="1">
       <widget class="QLineEdit" name="ui_units"/>
      </item>
-     <item row="6" column="0">
+     <item row="8" column="0">
       <widget class="QLabel" name="label_6">
        <property name="minimumSize">
         <size>
@@ -118,7 +118,7 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="8" column="1">
       <widget class="QSpinBox" name="ui_display_digits">
        <property name="focusPolicy">
         <enum>Qt::StrongFocus</enum>
@@ -128,14 +128,14 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="9" column="1">
       <widget class="QCheckBox" name="ui_display_scientific">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_7">
        <property name="minimumSize">
         <size>
@@ -187,6 +187,26 @@
        </property>
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QDoubleSpinBox" name="ui_min"/>
+     </item>
+     <item row="6" column="1">
+      <widget class="QDoubleSpinBox" name="ui_max"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Min</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Max</string>
        </property>
       </widget>
      </item>
