--- a/opentoolcontroller/views/AnalogOutputEditor.ui
+++ b/opentoolcontroller/views/AnalogOutputEditor.ui
@@ -198,6 +198,12 @@
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="label_10">
+       <property name="minimumSize">
+        <size>
+         <width>110</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>Max</string>
        </property>
