--- a/opentoolcontroller/views/BoolVarEditor.ui
+++ b/opentoolcontroller/views/BoolVarEditor.ui
@@ -16,6 +16,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_2">
        <property name="sizePolicy">
@@ -26,7 +32,7 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -52,7 +58,7 @@
       <widget class="QLabel" name="label_6">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -78,7 +84,7 @@
       <widget class="QLabel" name="label_3">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -104,7 +110,7 @@
       <widget class="QLabel" name="label_4">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
