--- a/opentoolcontroller/views/DigitalOutputEditor.ui
+++ b/opentoolcontroller/views/DigitalOutputEditor.ui
@@ -16,11 +16,17 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_5">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -39,7 +45,7 @@
       <widget class="QLabel" name="label_6">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -65,7 +71,7 @@
       <widget class="QLabel" name="label">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -94,7 +100,7 @@
       <widget class="QLabel" name="label_2">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -123,7 +129,7 @@
       <widget class="QLabel" name="label_3">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
