--- a/opentoolcontroller/views/IntVarEditor.ui
+++ b/opentoolcontroller/views/IntVarEditor.ui
@@ -16,11 +16,17 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_2">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -37,6 +43,12 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>50</width>
@@ -49,7 +61,7 @@
       <widget class="QLabel" name="label_6">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -63,9 +75,15 @@
      </item>
      <item row="1" column="1">
       <widget class="QSpinBox" name="ui_min">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
-         <width>50</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -75,7 +93,7 @@
       <widget class="QLabel" name="label_3">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -89,6 +107,12 @@
      </item>
      <item row="2" column="1">
       <widget class="QSpinBox" name="ui_max">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>50</width>
@@ -101,7 +125,7 @@
       <widget class="QLabel" name="label">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -120,7 +144,7 @@
       <widget class="QLabel" name="label_4">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -162,6 +186,12 @@
      </item>
      <item row="6" column="1">
       <widget class="QSpinBox" name="ui_launch_value">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>50</width>
