--- a/opentoolcontroller/views/SystemEditor.ui
+++ b/opentoolcontroller/views/SystemEditor.ui
@@ -83,6 +83,9 @@
      <property name="text">
       <string>Background SVG</string>
      </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
     </widget>
    </item>
    <item row="0" column="1">
@@ -106,6 +109,9 @@
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Movable Icons</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
