--- a/opentoolcontroller/views/FloatVarEditor.ui
+++ b/opentoolcontroller/views/FloatVarEditor.ui
@@ -55,7 +55,7 @@
       <widget class="QLabel" name="label_6">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -70,13 +70,13 @@
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="ui_min">
        <property name="decimals">
-        <number>3</number>
+        <number>2</number>
        </property>
        <property name="minimum">
-        <double>-1000000.000000000000000</double>
+        <double>-999999999.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>1000000.000000000000000</double>
+        <double>999999999.000000000000000</double>
        </property>
       </widget>
      </item>
@@ -84,7 +84,7 @@
       <widget class="QLabel" name="label_3">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -99,10 +99,10 @@
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="ui_max">
        <property name="minimum">
-        <double>-1000000.000000000000000</double>
+        <double>-999999999.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>1000000.000000000000000</double>
+        <double>999999999.000000000000000</double>
        </property>
       </widget>
      </item>
@@ -110,7 +110,7 @@
       <widget class="QLabel" name="label">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -129,7 +129,7 @@
       <widget class="QLabel" name="label_5">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -148,7 +148,7 @@
       <widget class="QLabel" name="label_7">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -171,7 +171,7 @@
       <widget class="QLabel" name="label_4">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
@@ -192,20 +192,45 @@
      </item>
      <item row="7" column="0">
       <widget class="QLabel" name="label_8">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>Use Launch Value</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item row="8" column="0">
       <widget class="QLabel" name="label_9">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>Launch Value</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item row="8" column="1">
-      <widget class="QDoubleSpinBox" name="ui_launch_value"/>
+      <widget class="QDoubleSpinBox" name="ui_launch_value">
+       <property name="minimum">
+        <double>-999999999.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>999999999.000000000000000</double>
+       </property>
+      </widget>
      </item>
      <item row="7" column="1">
       <widget class="QCheckBox" name="ui_use_launch_value">
